-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 RC
-
None
-
-
59466abc0 (dev), 5efdcd94b (6.5)
QTBUG-90893 introduced a new flag named QNetworkRequest::UseCredentialsAttribute, which is documented to keep the default (=false), but in reality set it to "true".
This breaks virtually all network connections that go to a public API with Access-Control-Allow-Origin set to '*'.
| For Gerrit Dashboard: QTBUG-112478 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 470186,3 | Fix default "credential" flag for WASM HTTP connections | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 470657,2 | Fix default "credential" flag for WASM HTTP connections | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |