src/network/access/qnetworkreplywasmimpl.cpp
@@ -282,10 +282,8 @@ void QNetworkReplyWasmImplPrivate::doSendRequest()
             request.attribute(QNetworkRequest::CacheSaveControlAttribute, false).toBool()) {
         attr.attributes -= EMSCRIPTEN_FETCH_PERSIST_FILE;
     }
-    if (request.attribute(QNetworkRequest::UseCredentialsAttribute, true).toBool()) {
-        attr.withCredentials = true;
-    }
 
+    attr.withCredentials = request.attribute(QNetworkRequest::UseCredentialsAttribute, false).toBool();
     attr.onsuccess = QNetworkReplyWasmImplPrivate::downloadSucceeded;
     attr.onerror = QNetworkReplyWasmImplPrivate::downloadFailed;
     attr.onprogress = QNetworkReplyWasmImplPrivate::downloadProgress;
